Non-PCH build is broken after JDK-8244550

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 15
    • Affects Version/s: 15
    • Component/s: hotspot
    • None
    • b23

      /home/shade/trunks/jdk-jdk/src/hotspot/share/oops/instanceKlass.inline.hpp: In static member function 'static instanceOop InstanceKlass::allocate_instance(oop, Thread*)':
      /home/shade/trunks/jdk-jdk/src/hotspot/share/oops/instanceKlass.inline.hpp:163:27: error: variable 'ResourceMark rm' has initializer but incomplete type
           ResourceMark rm(THREAD);
                                 ^

            Assignee:
            Aleksey Shipilev
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: