8244606: Non-PCH build is broken after JDK-8244550

Reviewed-by: redestad, dcubed